# tri-bot-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
chatbot/: __init__.py  settings.py
chatbot/engine/: __init__.py  knowledge_engine.py
chatbot/routers/: chat.py  video.py
chatbot/schemas/: chat.py
data/: Ironman Chattanooga Course Info, Tips & Tricks, and Q&A.txt
data_copy/: Nutrition for Cycling: Fueling Your Human Powered Vehicle.txt
